try to fix display error on mobile

--- a/hook/static/styles.scss
+++ b/hook/static/styles.scss
@@ -50,6 +50,7 @@ div.img-box {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   img {
     max-width: 50%;
     margin-top: 5em;
